--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -15,9 +15,9 @@
                     background-color: #000;
                     color: #fff;
                 }
-                &:active {
-                    color: red;
-                }
+                // &:active {
+                //     color: white;
+                // }
             }
         }
     }
